--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+body {
+  background-color: #f3f3f3;
+}
+
+/** 一旦削除で **/
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -24,4 +29,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
